# Digital-Image-Processing-and-Computer-Vision

./: .gitignore  README.md
1/: README.md
1/src/: CMakeLists.txt  play_video.cpp  show_image.cpp
2/: README.md  report.md
2/include/: Equalization.h  equalization.h
2/src/: CMakeLists.txt  Equalization.cpp  equalization.cpp  main.cpp
3/code/: README.md
3/code/include/: Filter.h  Noise.h
3/code/src/: CMakeLists.txt  Filter.cpp  Filter.h  Noise.cpp  main.cpp
3/report/: report.md
4/code/: CMakeLists.txt  README.md
4/code/include/: Segment.h
4/code/result/: contour_data.csv
4/code/src/: CMakeLists.txt  Segment.cpp  main.cpp
4/report/: report.md
5/code/: README.md
5/code/include/: Morphology.h
5/code/src/: CMakeLists.txt  Morphology.cpp  main.cpp
5/report/: report.md
6/code/: README.md  main.py
6/code/include/: Filter.h  Restore.h
6/code/src/: CMakeLists.txt  Equalization.cpp  Filter.cpp  Restore.cpp  main.cpp
6/report/: report.md
6/report/report.assets/: hat{y}.svg+xml
7/code/: README.md
7/code/src/: CMakeLists.txt  main.cpp  test.cpp
7/report/: report.md
8/code/: README.md  calibration_result.txt
8/code/images/: file_names.txt
8/code/src/: CMakeLists.txt  main.cpp
8/report/: report.md
9/code/: README.md
9/code/scripts/: BM.py  NCC.py  SGBM.py
9/report/: report.md
